--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/react": "^18.0.0",
     "appium": "2.0.0-rc.3",
     "appium-uiautomator2-driver": "^2.26.2",
+    "appium-xcuitest-driver": "^4.32.5",
     "concurrently": "^6.4.0",
     "eslint": "^8.0.0",
     "expo": "^48.0.0",
